[package]
authors = ["Ajeet D'Souza <98ajeet@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A smarter cd command for your terminal"
edition = "2021"
homepage = "https://github.com/ajeetdsouza/zoxide"
keywords = ["cli"]
license = "MIT"
name = "zoxide"
readme = "README.md"
repository = "https://github.com/ajeetdsouza/zoxide"
rust-version = "1.59"
version = "0.8.1"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["xtask/"]

[dependencies]
anyhow = "1.0.32"
askama = { version = "0.11.0", default-features = false }
bincode = "1.3.1"
clap = { version = "3.1.0", features = ["derive"] }
dirs = "4.0.0"
dunce = "1.0.1"
fastrand = "1.7.0"
glob = "0.3.0"
ordered-float = "3.0.0"
serde = { version = "1.0.116", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.24.1", default-features = false, features = [
    "fs",
    "user",
] }

[target.'cfg(windows)'.dependencies]
which = "4.2.5"

[build-dependencies]
clap = { version = "3.1.0", features = ["derive"] }
clap_complete = "3.1.0"
clap_complete_fig = "3.1.0"

[dev-dependencies]
assert_cmd = "2.0.0"
rstest = "0.13.0"
rstest_reuse = "0.3.0"
tempfile = "3.1.0"

[features]
default = []
nix-dev = []

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true

[package.metadata.deb]
assets = [
    [
        "target/release/zoxide",
        "usr/local/bin/",
        "755",
    ],
    [
        "contrib/completions/zoxide.bash",
        "usr/share/bash-completion/completions/zoxide",
        "644",
    ],
    [
        "contrib/completions/zoxide.fish",
        "usr/share/fish/completions/",
        "664",
    ],
    [
        "contrib/completions/_zoxide",
        "usr/share/zsh/vendor-completions/",
        "644",
    ],
    [
        "man/man1/*",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/zoxide/",
        "644",
    ],
    [
        "CHANGELOG.md",
        "usr/share/doc/zoxide/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/zoxide/",
        "644",
    ],
]
extended-description = """\
zoxide is a smarter cd command, inspired by z and autojump. It remembers which \
directories you use most frequently, so you can "jump" to them in just a few \
keystrokes."""
priority = "optional"
section = "admin"
