[package]
authors = ["Ajeet D'Souza <98ajeet@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A smarter cd command for your terminal"
edition = "2021"
homepage = "https://github.com/ajeetdsouza/zoxide"
keywords = ["cli"]
license = "MIT"
name = "zoxide"
readme = "README.md"
repository = "https://github.com/ajeetdsouza/zoxide"
rust-version = "1.64"
version = "0.8.3"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["xtask/"]

[workspace.dependencies]
anyhow = "1.0.32"
askama = { version = "0.11.0", default-features = false }
assert_cmd = "2.0.0"
bincode = "1.3.1"
clap = { version = "4.0.0", features = ["derive"] }
clap_complete = "4.0.0"
clap_complete_fig = "4.0.0"
dirs = "4.0.0"
dunce = "1.0.1"
fastrand = "1.7.0"
glob = "0.3.0"
ignore = "0.4.18"
nix = { version = "0.25.0", default-features = false, features = [
    "fs",
    "user",
] }
rstest = { version = "0.15.0", default-features = false }
rstest_reuse = "0.4.0"
serde = { version = "1.0.116", features = ["derive"] }
shell-words = "1.0.0"
tempfile = "3.1.0"
which = "4.2.5"

[dependencies]
anyhow.workspace = true
askama.workspace = true
bincode.workspace = true
clap.workspace = true
dirs.workspace = true
dunce.workspace = true
fastrand.workspace = true
glob.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
which.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_complete_fig.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
tempfile.workspace = true

[features]
default = []
nix-dev = []

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true

[package.metadata.deb]
assets = [
    [
        "target/release/zoxide",
        "usr/bin/",
        "755",
    ],
    [
        "contrib/completions/zoxide.bash",
        "usr/share/bash-completion/completions/zoxide",
        "644",
    ],
    [
        "contrib/completions/zoxide.fish",
        "usr/share/fish/vendor_completions.d/",
        "664",
    ],
    [
        "contrib/completions/_zoxide",
        "usr/share/zsh/vendor-completions/",
        "644",
    ],
    [
        "man/man1/*",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/zoxide/",
        "644",
    ],
    [
        "CHANGELOG.md",
        "usr/share/doc/zoxide/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/zoxide/",
        "644",
    ],
]
extended-description = """\
zoxide is a smarter cd command, inspired by z and autojump. It remembers which \
directories you use most frequently, so you can "jump" to them in just a few \
keystrokes."""
priority = "optional"
section = "utils"
