[package]
authors = ["Ajeet D'Souza <98ajeet@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A smarter cd command for your terminal"
edition = "2021"
homepage = "https://github.com/ajeetdsouza/zoxide"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
license = "MIT"
name = "zoxide"
readme = "README.md"
repository = "https://github.com/ajeetdsouza/zoxide"
rust-version = "1.74.1"
version = "0.9.6"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.32"
bincode = "1.3.1"
clap = { version = "4.3.0", features = ["derive"] }
color-print = "0.3.4"
dirs = "5.0.0"
dunce = "1.0.1"
fastrand = "2.0.0"
glob = "0.3.0"
ouroboros = "0.18.3"
rinja = { version = "0.3.2", default-features = false }
serde = { version = "1.0.116", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = [
    "fs",
    "user",
] }

[target.'cfg(windows)'.dependencies]
which = "6.0.0"

[build-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.0"
clap_complete_fig = "4.3.0"
color-print = "0.3.4"

[dev-dependencies]
assert_cmd = "2.0.0"
rstest = { version = "0.22.0", default-features = false }
rstest_reuse = "0.7.0"
tempfile = "3.1.0"

[features]
default = []
nix-dev = []

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true

[package.metadata.deb]
assets = [
    [
        "target/release/zoxide",
        "usr/bin/",
        "755",
    ],
    [
        "contrib/completions/zoxide.bash",
        "usr/share/bash-completion/completions/zoxide",
        "644",
    ],
    [
        "contrib/completions/zoxide.fish",
        "usr/share/fish/vendor_completions.d/",
        "664",
    ],
    [
        "contrib/completions/_zoxide",
        "usr/share/zsh/vendor-completions/",
        "644",
    ],
    [
        "man/man1/*",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/zoxide/",
        "644",
    ],
    [
        "CHANGELOG.md",
        "usr/share/doc/zoxide/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/zoxide/",
        "644",
    ],
]
extended-description = """\
zoxide is a smarter cd command, inspired by z and autojump. It remembers which \
directories you use most frequently, so you can "jump" to them in just a few \
keystrokes."""
priority = "optional"
section = "utils"
