[package]
name = "zoxide-shell"
version = "0.1.0"
authors = ["Ajeet D'Souza <98ajeet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
askama = { version = "0.10.3", default-features = false }

[dev-dependencies]
assert_cmd = "1.0.1"
once_cell = "1.4.1"
